<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<!--        <variable-->
<!--            name="oncreateacctclicked"-->
<!--            type="com.example.artwokmabel.login.LoginOptionsActivity.OnCreateAccountClicked" />-->
<!--        <variable-->
<!--            name="onloginclicked"-->
<!--            type="com.example.artwokmabel.login.LoginOptionsActivity.OnLoginClicked" />-->

        <variable
            name="LoginOptionsFragment"
            type="com.example.artwokmabel.login.LoginOptionsFragment" />

<!--        Uncomment when Google time-->
<!--        <variable-->
<!--            name="ongoogleloginclicked"-->
<!--            type="com.example.artwokmabel.login.LoginOptionsActivity.OnGoogleLoginClicked" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/artwok_background_blue"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/Login_couple_image"
            android:src="@drawable/login_couple_fun"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-144dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/artwok_logo"
            android:src="@drawable/artwok_login_icon"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button_material"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="230dp"
            android:layout_height="@dimen/zero_ui_login_blue_buttons"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:elevation="3dp"
            android:onClick="@{() -> LoginOptionsFragment.onLoginClicked()}"
            android:text="@string/Login_log_in"
            android:textAllCaps="false"
            android:textColor="@color/artwok_white"
            android:textSize="12sp"
            app:backgroundTint="@color/login_buttons_color"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.85" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_button_material"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="230dp"
            android:layout_height="@dimen/zero_ui_login_blue_buttons"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:elevation="3dp"
            android:onClick="@{() -> LoginOptionsFragment.onCreateAccountClicked()}"
            android:text="@string/Login_create_account"
            android:textAllCaps="false"
            android:textColor="@color/artwok_white"
            android:textSize="12sp"
            app:backgroundTint="@color/login_buttons_color"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.82" />

        <!--            android:onClick="@{() -> ongoogleloginclicked.onGoogleLoginClicked()}"-->
        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/google_button"
            android:src="@drawable/google_artwok"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/facebook_artwok"
            android:contentDescription="@string/facebook_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:text="@string/Login_buy_sell_share"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>