<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/upload_pic_imageView"
                android:layout_width="match_parent"
                android:layout_height="314dp"
                android:layout_gravity="center"
                android:paddingLeft="70dp"
                android:paddingTop="70dp"
                android:paddingRight="70dp"
                android:paddingBottom="70dp"
                app:srcCompat="@drawable/upload_pic_btn" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="#D3D3D3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/selectFontText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.07"
                    android:gravity="center_horizontal|center_vertical"
                    android:scaleType="fitCenter"
                    android:text="@string/font"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/fontSelectSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.13" />

                <ImageView
                    android:id="@+id/incFont"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_inc_font" />

                <ImageView
                    android:id="@+id/decFont"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_dec_font" />

                <ImageView
                    android:id="@+id/boldBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_bold_text" />

                <ImageView
                    android:id="@+id/italicsBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_italic_text" />

                <ImageView
                    android:id="@+id/underlineBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_underline_text" />

                <ImageView
                    android:id="@+id/strikeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_strike_text" />

                <ImageView
                    android:id="@+id/highlightBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_highlight_text" />

                <ImageView
                    android:id="@+id/alignBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_align_flat" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="0.45">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#CDCDCD"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/redBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="34dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_red_circle"
                        android:padding="0dp" />

                    <Button
                        android:id="@+id/greenBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="34dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_green_circle" />

                    <Button
                        android:id="@+id/blueBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="34dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_blue_circle" />

                    <Button
                        android:id="@+id/yellowBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="34dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_orange_circle" />

                    <Button
                        android:id="@+id/purpleBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="34dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_purple_circle" />

                    <Button
                        android:id="@+id/blackBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="34dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_black_circle" />

                    <Button
                        android:id="@+id/whiteBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="34dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_white_circle" />
                </LinearLayout>
            </HorizontalScrollView>

            <EditText
                android:id="@+id/new_post_desc"
                android:layout_width="match_parent"
                android:layout_height="247dp"
                android:autofillHints="@string/addDescription"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/upload_post_add_description"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <EditText
                android:id="@+id/new_post_hashtags"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/upload_post_add_hashtags"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/list_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/list"
                    android:textColor="@color/artwok_black" />

                <Button
                    android:id="@+id/save_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textColor="@color/artwok_black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>