<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/artwok_load_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">
    <!--tools:context=".LaunchPageActivity">-->

    <ImageView
        android:id="@+id/artwok_logo"
        android:layout_width="202dp"
        android:layout_height="202dp"
        android:contentDescription="@string/artwok_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        app:srcCompat="@drawable/official_logo" />

    <TextView
        android:id="@+id/artwok_slogan"
        android:layout_width="221dp"
        android:layout_height="41dp"
        android:text="@string/buy_sell_share"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />


<!--    <com.facebook.login.widget.LoginButton-->
<!--        android:id="@+id/facebook_button"-->
<!--        android:layout_width="195dp"-->
<!--        android:layout_height="67dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.505"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.68"-->
<!--        app:srcCompat="@drawable/facebook_button"-->
<!--        />-->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/facebook_button" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Create account"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />
    <!--<ImageButton-->
<!--    android:id="@+id/google_button"-->
<!--    android:layout_width="195dp"-->
<!--    android:layout_height="36dp"-->
<!--    android:layout_marginStart="8dp"-->
<!--    android:layout_marginLeft="8dp"-->
<!--    android:layout_marginTop="8dp"-->
<!--    android:layout_marginEnd="8dp"-->
<!--    android:layout_marginRight="8dp"-->
<!--    android:layout_marginBottom="8dp"-->
<!--    android:background="#00FFFFFF"-->
<!--    android:contentDescription="@string/google_button"-->
<!--    android:scaleType="centerCrop"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintHorizontal_bias="0.502"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintVertical_bias="0.766"-->
<!--    app:srcCompat="@drawable/google_button" />-->

</androidx.constraintlayout.widget.ConstraintLayout>